test1-2023-10-07.log
regress/test1.fir:7247:15: error: use of unknown declaration 'validif'
    tmp499 <= validif(head(inp_a.inp_c.inp_j.inp_gc.inp_gkb.inp_flb.inp_fic, 1), SInt<13>("h-b9c"))
              ^
regress/test1.fir:28262:15: error: use of unknown declaration 'validif'
    tmp550 <= validif(tail(asUInt(SInt<22>("h-3089")), 21), tmp548)
              ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.0821 seconds

  ----Wall Time----  ----Name----
    0.0803 ( 97.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.0740 ( 90.2%)    Parse modules
    0.0017 (  2.1%)  Rest
    0.0821 (100.0%)  Total

{
  totalTime: 0.089,
  maxMemory: 0
}
